Dec 06 2003  3.1.0  Fixed Makefile looking for monitor/unmonitor scripts
Dec 05 2003  3.1.0  First major CVS update in a while.  Most everything should
                     be working but documentation is a little sketchy about the
                     new setup.  Refer to kis_packsources.cc to see what your
                     favorite capsource got renamed to, real docs to follow 
                     soon.
                    Drone code rewritten, but debug info is still turned on. 
                     Expect it to be very noisy until I finish it.
                    Viha support is untested - I'm not sure the new channel
                     control/packstream code will work, so let me know.
                    Added 'wrt54g' card type for embedded drones on linksys
                     routers.  More on this project later.
                    Fixed mispasted code in prism2 pcap packet mangling
                    Added cardtype definition for wlanng_legacy
Dec 04 2003  3.1.0  Major refactoring of core code:
                     * Rewrite of core packet stream code
                     * 10-15 times speed increase in packet processing
                     * Redefinition of several packet sources.  ciscocvs is now
                       cisco_wifix, ar5k is now vtar5k, prism2_* is now 
                       wlanng_*
                     * Migration of rfmon into programmatic per-capsource code,
                       no calling of kismet_monitor scripts
                     * Migration of most linux channel control code to internal
                       ioctl calls instead of external execution
                     * Elimination of IPC for all packet sources, IPC done only
                       for channel control not packet transfer
                     * Better error messages for monitor failures, etc
Nov 01 2003  3.1.0  Fixed segfault in gpsmap sample sanitizer
Oct 31 2003  3.1.0  Fixed parsing of multiple sequential gpsxml files